@@ -70,8 +70,10 @@
     <string id="32100">Slideshow</string>
     <string id="32101">Local artist folder</string>
     <string id="32102">  Image Priority</string>
-    <string id="32103">Fallback slideshow folder</string>
-    <string id="32104">Override slideshow folder</string>
+    <string id="32103">Fallback folder</string>
+    <string id="32104">Override folder</string>
+    <string id="32105">Use fallback slideshow</string>
+    <string id="32106">Use override slideshow</string>
     <string id="32200">Advanced</string>
     <string id="32201">Limit size of download cache</string>
     <string id="32202">  Maximum cache size (in megabytes)</string>
