@@ -1,4 +1,5 @@
 v.1.5.1
+- fixed bug on Windows where once override or fallback were set they could not be unset
 - changed artist bio download so it downloads even if just showing the override images
 - updated artist bio infolabel to filter out link to READ MORE on last.fm
 - new language files for Danish and Italian
